--- a/My Coaster Tracker/Base.lproj/Main.storyboard
+++ b/My Coaster Tracker/Base.lproj/Main.storyboard
@@ -72,7 +72,7 @@
             <objects>
                 <navigationController storyboardIdentifier="riddenCoastersNavigation" title="Ridden Coasters Navigation" id="tIs-by-8vo" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="8uw-4q-FQj">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -263,7 +263,13 @@
                             <outlet property="delegate" destination="1u5-hf-Whe" id="bYZ-gv-oLh"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Menu" id="Wbe-69-CwB"/>
+                    <navigationItem key="navigationItem" title="Menu" id="Wbe-69-CwB">
+                        <barButtonItem key="rightBarButtonItem" title="Check In" id="59g-Vr-bFU">
+                            <connections>
+                                <segue destination="1Mc-gm-wb1" kind="presentation" id="HEt-FB-PZ3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Bn-kx-kRu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2764,7 +2770,7 @@
         <image name="rollercoaster-trans.png" width="1024" height="1024"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Xsr-BQ-KI3"/>
-        <segue reference="75e-ko-bNt"/>
+        <segue reference="HEt-FB-PZ3"/>
+        <segue reference="Cf1-b0-5uj"/>
     </inferredMetricsTieBreakers>
 </document>
